# mrouter

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
src/: app.rs  config.rs  logger.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: mod.rs
src/daemon/: mod.rs
src/database/: cleanup.rs  migrations.rs  mod.rs  monitor.rs
src/database/dao/: mcp.rs  mod.rs  provider.rs  skill.rs  stats.rs
src/database/mysql/: migrations.rs
src/database/sqlite/: migrations.rs  mod.rs
src/models/: mcp.rs  mod.rs  provider.rs  skill.rs  stats.rs
src/services/: config_sync.rs  health_check.rs  mod.rs  model_cache.rs  skill.rs
src/services/provider/: mod.rs  switch.rs
src/services/proxy/: circuit_breaker.rs  cost.rs  error.rs  failover.rs  format_converter.rs  forwarder.rs  handler_context.rs  handlers.rs  mod.rs  model_fallback.rs  model_mapper.rs  request_logger.rs  response_processor.rs  server.rs  sse_collector.rs  token_parser.rs  utils.rs
src/services/proxy/providers/: adapter.rs  anthropic.rs  auth.rs  custom.rs  google.rs  mod.rs  openai.rs
src/tui/: event.rs  mod.rs  theme.rs  ui.rs
src/tui/pages/: mod.rs
src/tui/tabs/: mod.rs  request_logs.rs
src/tui/widgets/: dialog.rs  mod.rs
src/utils/: mod.rs
